# semTParser

./: .env  .gitignore  Cargo.toml  README.md  payload_sample  table_1.csv
.github/workflows/: cross-build.yml
docs/: parsing_and_generation.md
src/: main.rs  notebook_helpers.rs  operations.rs  python_helpers.rs  test_notebook.rs
src/code_helper/: mod.rs
